Updated new files

--- a/templates/contactPage.html
+++ b/templates/contactPage.html
@@ -71,7 +71,8 @@
     <footer class = "mt-auto">
         <pre>Created with ❤️ by Carmen Chau.           <a href="{{ url_for('contactInfo') }}">Contact Information</a></pre>
     </footer>
+    <script src = "/static/contactPage.js"></script>
 </body>
 </html>
 <!--<script type="text/javascript" src="{{ url_for('static',filename ='contactPage.js') }}"></script>-->
-<script src = "/static/contactPage.js"></script>
+<!--<script src = "/static/contactPage.js"></script>-->
