--- a/static/thankYou.css
+++ b/static/thankYou.css
@@ -1,19 +1,3 @@
-/*
-*{
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-    height: 100%;
-}
-
-#container{
-
-}
-
-*/
-
 body{
     font-family:'Times New Roman', Times, serif;
     background-color: lightblue;
@@ -144,6 +128,14 @@ nav a:hover {
     padding-top: 10em;
     text-shadow: -1.0px 1.0px 0 white, 1.0px 1.0px 0 white, 1.0px -1.0px 0 white,-1.0px -1.0px 0 white; 
 }
+
+.text-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5%;
+}
+
 
 .highlight{
     background-color: lightgreen;
