--- a/templates/contactPage.html
+++ b/templates/contactPage.html
@@ -38,7 +38,7 @@
             <input type="hidden" name="_captcha" value="false"><!--Although not recommended, for testing purposes only, disabled reCAPTCHA to avoid displaying formSubmit's branding-->
             <input type = "hidden" name = "_subject" value = "New email from Iris Flower Form!"><!--Allowing user submission to be sent back to the email in the "action" attribute of the form tag-->
             <!--<input type = "hidden" name = "_next" value = "https://carmen-chau.github.io/thank-you-page/">--><!--Old "thank you page" deployed from Github-->
-            <input type = "hidden" name = "_next" value = "https://heroku-iris-test-app-1.herokuapp.com/thankYou">
+            <input type = "hidden" name = "_next" value = "https://iris-render-app.onrender.com/thankYou">
             <div class = "col-md-6">
                 <label for = "firstName" class = "form-label">First Name (required): </label>
                 <input type = "text" class = "form-control" name = "firstName" id = "firstName" required>
