Updated app.py and all html files

--- a/templates/aboutApp.html
+++ b/templates/aboutApp.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <footer class = "mt-auto">
-        <pre>Created with ❤️ by Carmen Chau.           <a href="{{ url_for('contactInfo') }}">Contact Information</a></pre>
+        <pre>Created by Carmen Chau.           <a href="{{ url_for('contactInfo') }}">Contact Information</a></pre>
     </footer> 
 </body>
 </html>
