--- a/templates/thankYou.html
+++ b/templates/thankYou.html
@@ -45,7 +45,7 @@
         </p>
     </div>
     <footer class = "mt-auto">
-        <pre>Created with ❤️ by Carmen Chau.           <a href="{{ url_for('contactInfo') }}">Contact Information</a></pre>
+        <pre>Created by Carmen Chau.           <a href="{{ url_for('contactInfo') }}">Contact Information</a></pre>
     </footer>
     <script src = "/static/thankYou.js"></script>
 </body>
