--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@ Reference video (about 7 min in so far): https://www.youtube.com/watch?v=8QKOaTY
         <!--</div>-->
     </div>
     <footer class = "mt-auto">
-        <pre>Created with ❤️ by Carmen Chau.           <a href="{{ url_for('contactInfo') }}">Contact Information</a></pre>
+        <pre>Created by Carmen Chau.           <a href="{{ url_for('contactInfo') }}">Contact Information</a></pre>
     </footer> 
 </body>
 </html>
