--- a/templates/aboutApp.html
+++ b/templates/aboutApp.html
@@ -8,23 +8,23 @@
 <body>
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-     <!-- Option 1: Bootstrap Bundle with Popper -->
+     <!-- Bootstrap Bundle with Popper -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
      <!--CSS Link-->
      <link rel = "stylesheet" href = "/static/aboutApp.css">
     <header>
         <img class = "webpageLogo" src = "/static/IrisLogo.png" width = 125px height = 125px alt = "Logo of website with Iris flower">
-        <input type = "checkbox" id = "navToggle" class = "navToggle"> <!--This will be the toggle button to enable mobile to see full nav bar. This is because we don't want to use any JS in making the toggle feature-->
-        <nav> <!--Putting the nav tag helps incidate a set of hyperlinks. Only intended for major blocks of such links-->
-            <ul> <!--Defining an unordered list-->
+        <input type = "checkbox" id = "navToggle" class = "navToggle"> 
+        <nav>
+            <ul> 
                 <li><a href = "{{url_for('home')}}">Home</a></li>
                 <li><a href = "{{ url_for('aboutIrisFlower')}}">About the Flower</a></li>
                 <li><a href = "{{ url_for('aboutApplication')}}">About the Application</a></li>
                 <li><a href = "{{ url_for('contactInfo')}}">Contact</a></li>
             </ul>
         </nav>
-        <label for = "navToggle" class = "navToggleSymbol"> <!--The label tag serves as a "label" for the checkbox.-->
-            <span>⌄</span> <!--In this case, because we are not actually designing a checklist item (we are designing a "button"), the value of this label is the symbol itself. Using span instead of div because this is an inline element-->
+        <label for = "navToggle" class = "navToggleSymbol">
+            <span>⌄</span> 
         </label>
     </header>
     <div class = "webpageTitle">
@@ -41,8 +41,8 @@
         </div>
         <div class = "row">
             <div id = "applicationVideo"><i><u>Languages and Frameworks used:</u></i></div>
-            <div id = "frontendDes"><b>Front end:</b> HTML, CSS, JavaScript</div>
-            <div id = "backendDes"><b>Back end:</b>Python, Flask</div>
+            <div id = "frontendDes"><b>ML Script:</b> Python, Flask</div>
+            <div id = "backendDes"><b>Front end Application:</b>HTML, CSS, BootStrap, JavaScript</div>
         </div>
     </div>
     <footer class = "mt-auto">
@@ -51,12 +51,3 @@
 </body>
 </html>
 
-<!--Old code: Centered text stating "coming soon:"
-
-
-<div class = "row">
-        <div class = "text-center">
-            <p>Coming soon!</p>
-        </div>
-    </div>
--->
