--- a/static/homePage.css
+++ b/static/homePage.css
@@ -145,6 +145,7 @@ nav a:hover {
 @media screen and (max-width: 300px) { /*Used to be 600px*/
     input[class*="userInputSections"] {
       width: 100%;
+      height: 150%; /*Was not here prior*/
       margin-top: 0;
     }
   }
